[workspace]

members = [
	"streaming-platform",
	#"sp-tokio-tls",
	"sp-dto",
	"sp-auth",
	"sp-cfg",
	"sp-web",
	"sp-yew",
	"sp-manager",
	"co/sp-pack-core",
	"co/sp-co-hub",
	"co/sp-co-build",
	"co/sp-co-pod",
	"co/sp-co-auth",
	"co/sp-co-web",
	"co/sp-co-cli",
	"distribution/sp-public-host",
	"distribution/spup"
]