[workspace]

members = [
	"streaming-platform",
	#"sp-tokio-tls",
	"sp-dto",
	"sp-auth",
	"sp-cfg",
	"sp-web",
	"sp-yew",
	"sp-manager",
	"sp-co/sp-pack-core",
	"sp-co/sp-co-hub",
	"sp-co/sp-co-build",
	"sp-co/sp-co-pod",
	"sp-co/sp-co-auth",
	"sp-co/sp-co-web",
	"sp-co/sp-co-cli",
	"distribution/sp-public-host",
	#"distribution/spup"
]