[package]
name = "sp-dto"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["message", "broker", "stream"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/astromq/streaming-platform"
documentation = "https://docs.rs/sp-dto"
description = """
Message format and types for data transfer used by https://github.com/astromq/streaming-platform/streaming-platform
"""
edition = "2018"

[dependencies]

bytes = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }