[package]
name = "sp-dto"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["message", "broker", "stream"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/skytfs/streaming-platform"
documentation = "https://docs.rs/sp-dto"
description = """
Message format and types for data transfer used by https://github.com/skytfs/streaming-platform/streaming-platform
"""
edition = "2018"

[dependencies]

bytes = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }