[package]
name = "sp-dto"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["message", "broker", "stream"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/skytfs/streaming-platform"
documentation = "https://docs.rs/sp-dto"
description = """
Message format and types for data transfer used by https://github.com/skytfs/streaming-platform/streaming-platform
"""
edition = "2021"

[dependencies]

bytes = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
package = "uuid"
version = "*"
features = ["serde", "v4"]

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
package = "uuid"
version = "*"
features = ["serde", "v4", "wasm-bindgen"]