[package]
name = "sp-manager"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crossbeam = "*"
serde = "*"
serde_derive = "*"
toml = "*"
sysinfo = "*"
tokio = "0.2.0-alpha.6"
warp = { git = "https://github.com/seanmonstar/warp", features = ["tls"] }
