[package]
name = "sp-public-host"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
env_logger = "*"
serde = "*"
serde_derive = "*"
toml = "*"
bytes = "*"
futures = { version = "0.3", features = ["async-await"] }
warp = { git = "https://github.com/seanmonstar/warp", features = ["tls"] }
