[package]
name = "sp-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
time = { version = "*", features = ["serde-human-readable"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
rkyv = "*"
sled = "*"
sp-dto = { path = "../sp-dto" }