[package]
name = "sp-tokio"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
crossbeam = "*"
tokio = { git = "https://github.com/tokio-rs/tokio" }
tokio-io = { git = "https://github.com/tokio-rs/tokio" }
serde = "*"
serde_derive = "*"
serde_json = "*"
sp-dto = { path = "../sp-dto" }
