[package]
name = "sp-tokio"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
bytes = "*"
futures-preview = "=0.3.0-alpha.19"
tokio = { git = "https://github.com/tokio-rs/tokio" }
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = "*"
sp-dto = { path = "../sp-dto" }
