[package]
name = "sp-yew"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["yew", "wasm"]
categories = ["web-programming", "wasm"]
repository = "https://github.com/skytfs/streaming-platform"
documentation = "https://docs.rs/sp-yew"
description = """
Component communication tool for Yew framework.
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
yew = { version = "0.17", features = ["web_sys"] }
sp-dto = "0.1"