[package]
name = "sp-yew"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["yew", "wasm"]
categories = ["web-programming", "wasm"]
repository = "https://github.com/skytfs/streaming-platform"
documentation = "https://docs.rs/sp-yew"
description = """
Component communication tool for Yew framework.
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
yew = { git = "https://github.com/yewstack/yew" }
yew-services = { git = "https://github.com/yewstack/yew-services" }
sp-dto = { path = "../sp-dto" }