[package]
name = "streaming-platform"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["message", "broker", "stream"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/skytfs/streaming-platform"
documentation = "https://docs.rs/streaming-platform"
description = """
Data streaming platform and message broker with concurrent data transfer capabilities.
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
futures = { version = "*", features = ["async-await"] }
rand = "*"
byteorder = "*"
siphasher = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", optional = true }
sp-dto = { path = "../sp-dto" }
sp-cfg = { path = "../sp-cfg" }

[features]

default = []
http = ["hyper"]

[dev-dependencies]

env_logger = "*"