[package]
name = "streaming-platform"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2018"

[dependencies]

log = "*"
crossbeam = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
url = "2.0"
openssl = "*"
cookie = "*"
ws = { version = "*", features = ["ssl"] }
sp-dto = { path = "../sp-dto" }
