[package]
name = "sp-co-cli"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "*"
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = "*"
sse-client = { version = "*", features = ["native-tls"] }
sp-dto = { path = "../../sp-dto" }