[package]
name = "sp-pack-core"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.7"
chrono = "*"
serde = "*"
serde_derive = "*"
toml = "*"
tar = "*"
lz4 = "*"