[package]
name = "spup"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
env_logger = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = "*"
streaming-platform = { path = "../../streaming-platform" }
sp-build-core = { path = "../../sp-co/sp-build-core" }