[package]
name = "sp-build-core"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
rand = "0.8"
chrono = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
tar = "*"
lz4 = "*"