[package]
name = "sp-build-core"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
rand = "*"
chrono = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
tar = "*"
lz4 = "*"