[package]
name = "sp-build-core"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
rand = "*"
time = { version = "*", features = ["serde-human-readable"] }
serde = "*"
serde_json = "*"
serde_derive = "*"
tar = "*"
lz4_flex= "*"
