[package]
name = "sp-co-auth"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
env_logger = "*"
base64 = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sp-auth = { path = "../../sp-auth" }
streaming-platform = { path = "../../streaming-platform" }