[package]
name = "sp-co-cfg"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
env_logger = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
rkyv = "*"
sled = { version = "*"}
streaming-platform = { path = "../../streaming-platform" }