[package]
name = "sp-co-cfg"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "*"
env_logger = "*"
time = { version = "*", features = ["serde-human-readable"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
sp-storage = { path = "../../sp-storage" }
streaming-platform = { path = "../../streaming-platform" }
