[package]
name = "sp-co-cli"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "*"
futures = "*"
tokio = { version = "*", features = ["rt-multi-thread"] }
reqwest = { version = "*" }
sp-dto = { path = "../../sp-dto" }