[package]
name = "sp-co-hub"
version = "0.1.0"
authors = ["Maximb <sprayrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "*"
serde = "*"
serde_derive = "*"
toml = "*"
streaming-platform = { path = "../../streaming-platform" }